--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -956,9 +956,9 @@ section.footer{
     width: 100%;
  }
 
- .section-title {
+ /* .section-title {
     padding-left: 10.5%
- }
+ } */
 
  .container {
     display: flex;
@@ -977,9 +977,16 @@ section.footer{
 
   .column > p {
     font-size: 1.5rem;
+    
   }
 
   p strong {
     color:#2860F8 
   }
-  
+
+  .axiologicresearchh-container {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
+    padding: 20px;
+  }
