--- a/docs/assets/css/main.css
+++ b/docs/assets/css/main.css
@@ -6,7 +6,7 @@
 
 html,
 body {
-    background: rgba(24, 29, 43, 1);
+    background: rgba(0, 0, 0, 1);
     max-width: 100vw;
     font-family: 'Raleway', SansSerif, serif;
     color: white;
@@ -22,7 +22,7 @@ body {
     align-items: center;
     justify-content: space-between;
     height: 100px;
-    background: #151220;
+    background: rgba(0, 0, 0, 1);
 }
 
 .logo-img img {
@@ -35,17 +35,17 @@ body {
     list-style: none;
 }
 
-.main-menu>li {
+.main-menu > li {
     position: relative;
     margin-left: 26px;
 }
 
-.main-menu>li:nth-child(3)>a {
+.main-menu > li:nth-child(3) > a {
     display: inline-block;
     min-width: 0px;
 }
 
-.main-menu li>a {
+.main-menu li > a {
     font-weight: 500;
     font-size: 1.125rem;
     line-height: 1.31rem;
@@ -65,12 +65,77 @@ i.fa-chevron-up {
     padding-left: 10px;
 }
 
-.main-menu li>a:hover {
-    color: #0073ff;
+.main-menu li > a:hover {
+    color: #07A5E9;
 }
 
+/* MOBILE MENU */
+.hamburger-lines {
+    height: 26px;
+    width: 32px;
+    top: 17px;
+    left: 20px;
+    display: none;
+    flex-direction: column;
+    justify-content: space-between;
+}
+
+.hamburger-lines .line {
+    display: block;
+    height: 4px;
+    width: 100%;
+    border-radius: 10px;
+    background: white;
+}
+
+.secondary-menu {
+    position: fixed;
+    z-index: 2;
+    top: 100px;
+    right: 0;
+    height: calc(100vh - 100px);
+    background: rgba(0, 0, 0);
+    display: flex;
+    flex-direction: column;
+    width: 30vw;
+    min-width: 320px;
+    list-style: none;
+    justify-content: flex-start;
+    transform: translateX(100%);
+    transition: transform 0.3s ease-in-out;
+
+}
+
+.secondary-menu li:first-child {
+    margin-top: 30px;
+}
+
+.secondary-menu.toggle {
+    transform: translateX(0);
+}
+
+.secondary-menu li {
+    z-index: 3;
+    margin-left: 40px;
+    margin-bottom: 30px;
+}
+
+.secondary-menu li a {
+    text-decoration: none;
+    color: white;
+    font-weight: 500;
+    font-size: 1.875rem;
+    line-height: 2.1875rem;
+}
+
+.secondary-menu li a:hover {
+    color: #07A5E9;
+}
+
+/* END MOBILE MENU */
+
 .btn-contact {
-    background: linear-gradient(270deg, #222BE7 6.45%, #2860F8 100%);
+    background: #07A5E9;
     border-radius: 35px;
     font-weight: 700;
     font-size: 1rem;
@@ -182,7 +247,7 @@ i.fa-chevron-up {
 }
 
 .secondary-menu li a:hover {
-    color: #0073ff;
+    color: #07A5E9;
 }
 
 /* END MOBILE MENU */
@@ -206,10 +271,57 @@ section.home {
     margin-bottom: 0;
 }
 
+dialog.axiologic_modal.site_cookies_info {
+    width: min(85%, 1319px);
+    height: fit-content;
+    top: auto;
+    margin: auto auto 30px;
+    background: #C0DEED;
+    border-radius: 8px;
+}
+
+dialog.axiologic_modal.site_cookies_info .dialog_header {
+    display: none;
+}
+
+dialog.axiologic_modal.site_cookies_info .dialog_content {
+    padding: 20px;
+    gap: unset;
+    color: #000000;
+    text-align: center;
+    background: #C0DEED;
+}
+
+.modal_action_button {
+    text-align: center;
+    padding: 7px 25px;
+    border-radius: 6px;
+    background: #000000;
+    color: #FFFFFF;
+    border: 1px solid #000000;
+}
+
+.site_cookies_info .dialog_actions_container {
+    margin-top: 20px;
+    text-align: center;
+}
+
+
 .landing-page-text {
-    max-width: 495px;
     padding: 0;
-    margin-top: calc((100vh - 100px)* 0.2);
+    border-radius: 8px;
+}
+
+.landing-page-text img {
+    width: 100%;
+    object-fit: contain;
+    border-radius: 8px;
+}
+
+.landing-page-text video {
+    width: 100%;
+    object-fit: contain;
+    border-radius: 8px;
 }
 
 .landing-page-text h1 {
@@ -222,7 +334,7 @@ section.home {
 }
 
 .landing-page-text h1 span {
-    background: linear-gradient(270deg, #222BE7 6.45%, #2860F8 100%);
+    background: linear-gradient(270deg, #222BE7 6.45%, #07A5E9 100%);
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
     text-fill-color: transparent;
@@ -250,7 +362,7 @@ section.home {
     border: none;
     cursor: pointer;
     outline: none;
-    margin-bottom: calc((100vh - 100px)*0.25);
+    margin-bottom: calc((100vh - 100px) * 0.25);
 
 }
 
@@ -260,10 +372,10 @@ section.home {
 section {
     color: white;
     padding: 3.125rem 10%;
-    background-color: rgba(24, 29, 43, 1);
+    background-color: rgba(0, 0, 0, 1);
 }
 
-section>* {
+section > * {
     padding: 0 10px;
 }
 
@@ -271,8 +383,8 @@ section.about {
     scroll-margin-top: 150px;
     width: 100%;
     background: url("../images/ellipse-right-top.svg") no-repeat 95% 0%,
-        url("../images/ellipse-left-top.svg") no-repeat 5% 0%,
-        url("../images/ellipse-bottom-left.svg") no-repeat 5% 100%;
+    url("../images/ellipse-left-top.svg") no-repeat 5% 0%,
+    url("../images/ellipse-bottom-left.svg") no-repeat 5% 100%;
     background-color: rgba(24, 29, 43, 1);
     padding-top: 0;
     padding-bottom: 0;
@@ -360,12 +472,12 @@ div.about-content h2 span {
     letter-spacing: 0.03em;
 }
 
-.project-description>p>a {
+.project-description > p > a {
     color: #1F69F7;
     text-decoration: none;
 }
 
-.project-description>button {
+.project-description > button {
     position: absolute;
 }
 
@@ -396,7 +508,7 @@ section.about-second {
 
 }
 
-.ai-introduction>p {
+.ai-introduction > p {
     margin: 0 auto;
 }
 
@@ -419,14 +531,14 @@ section.about-second {
     grid-gap: 30px;
 }
 
-.cards>div {
+.cards > div {
     background: linear-gradient(180.04deg, #203048 0.04%, #202139 45.98%, #192031 99.96%);
     border: 1px solid #2E2F46;
     box-shadow: 0px 0px 4px rgba(0, 0, 0, 0.25);
     border-radius: 6px;
 }
 
-.cards>div h4 {
+.cards > div h4 {
     font-family: 'Raleway';
     font-style: normal;
     font-weight: 600;
@@ -435,7 +547,7 @@ section.about-second {
     margin-bottom: 10px;
 }
 
-.cards>div p.truncate {
+.cards > div p.truncate {
     text-align: left;
     font-weight: 500;
     font-size: 1.125rem;
@@ -451,7 +563,8 @@ section.about-second {
     padding: 25px;
 }
 
-.logo-container {}
+.logo-container {
+}
 
 .logo-container img {
     display: block;
@@ -467,7 +580,7 @@ section.projects {
     scroll-margin-top: 50px;
 }
 
-.projects>.breakline {
+.projects > .breakline {
     margin-top: 0;
 }
 
@@ -494,7 +607,7 @@ section.projects {
     margin-right: 15px;
 }
 
-.projects>h1 {
+.projects > h1 {
     padding-top: 11px;
     margin-bottom: 65px;
     text-align: center;
@@ -505,7 +618,7 @@ section.projects {
 
 }
 
-.project-name>h2 {
+.project-name > h2 {
     color: rgba(45, 91, 255, 1);
     font-weight: 500;
     font-size: 2rem;
@@ -513,7 +626,7 @@ section.projects {
     color: #2D5BFF;
 }
 
-.project-name>h3 {
+.project-name > h3 {
     font-style: normal;
     font-weight: 500;
     font-size: 1.875rem;
@@ -545,7 +658,7 @@ section.projects {
 
 button.btn-view-more {
     cursor: pointer;
-    background: linear-gradient(270deg, #222BE7 6.45%, #2860F8 100%);
+    background: linear-gradient(270deg, #222BE7 6.45%, #07A5E9 100%);
     padding: 25px 35px;
     border: 0px;
     border-radius: 35px;
@@ -608,7 +721,7 @@ section.researches {
 }
 
 .research p a:hover {
-    color: #1F69F7;
+    color: #07A5E9;
 
 }
 
@@ -624,7 +737,6 @@ section.contact {
     scroll-margin-top: 110px;
     padding-bottom: 1px;
     border: 3px solid #242C34;
-    box-shadow: 0px 0px 54px -5px rgba(47, 73, 248, 0.46);
     border-radius: 5px;
     margin: 1rem 4%;
     padding: 4.5rem;
@@ -633,7 +745,7 @@ section.contact {
 
 }
 
-.contact>h1 {
+.contact > h1 {
     font-family: 'Raleway';
     font-style: normal;
     font-weight: 500;
@@ -643,8 +755,8 @@ section.contact {
     color: #FFFFFF;
 }
 
-.contact>h1>span {
-    color: #1F69F7;
+.contact > h1 > span {
+    color: #07A5E9;
 }
 
 .contact-container {
@@ -681,7 +793,7 @@ section.contact {
     font-weight: 600;
     font-size: 1.5rem;
     line-height: 230.4%;
-    background: linear-gradient(270deg, #222BE7 6.45%, #2860F8 100%);
+    background: #07A5E9;
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
     text-fill-color: transparent;
@@ -736,10 +848,10 @@ section.footer {
 }
 
 .footer ul li:hover a {
-    color: #1F69F7;
+    color: #07A5E9;
 }
 
-@media(max-width: 1200px) {
+@media (max-width: 1200px) {
     section.home {
         background-position: 0rem 0rem;
         background-size: 100% 100%;
@@ -747,23 +859,23 @@ section.footer {
     }
 }
 
-@media(max-width: 1176px) {
+@media (max-width: 1176px) {
     .contact-information:nth-child(2) {
         margin-left: 7px;
     }
 
-    .contact-information:nth-child(2)>.text {
+    .contact-information:nth-child(2) > .text {
         padding-left: 7px;
     }
 }
 
-@media(max-width: 1145px) {
+@media (max-width: 1145px) {
     .card-inside:last-child {
         grid-column: 1/ span 2;
     }
 }
 
-@media(max-width: 1100px) {
+@media (max-width: 1100px) {
     section.home {
         background-position: 0rem -2rem;
         background-size: 100% calc(100% + 2rem);
@@ -771,7 +883,7 @@ section.footer {
     }
 }
 
-@media(max-width: 1023px) {
+@media (max-width: 1023px) {
     .footer ul {
         flex-direction: column;
         margin-top: 15px;
@@ -805,10 +917,10 @@ section.footer {
     }
 }
 
-@media(max-width: 950px) {
+@media (max-width: 950px) {
     .landing-page-text {
 
-        margin-top: calc((100vh - 100px)* 0.08);
+        margin-top: calc((100vh - 100px) * 0.08);
     }
 
     section.home {
@@ -823,11 +935,11 @@ section.footer {
     }
 
     .btn-contact-home {
-        margin-bottom: calc((100vh - 100px)*0.37)
+        margin-bottom: calc((100vh - 100px) * 0.37)
     }
 }
 
-@media(max-width: 900px) {
+@media (max-width: 900px) {
     html {
         font-size: 14px;
     }
@@ -841,12 +953,12 @@ section.footer {
     }
 
     .btn-contact-home {
-        margin-bottom: calc((100vh - 100px)*0.41)
+        margin-bottom: calc((100vh - 100px) * 0.41)
     }
 
 }
 
-@media(max-width: 820px) {
+@media (max-width: 820px) {
     #newLine {
         display: none;
     }
@@ -867,7 +979,7 @@ section.footer {
     }
 }
 
-@media(max-width: 700px) {
+@media (max-width: 700px) {
     html {
         font-size: 13px;
     }
@@ -886,7 +998,7 @@ section.footer {
     }
 }
 
-@media(max-width: 500px) {
+@media (max-width: 500px) {
     html {
         font-size: 12px;
     }
@@ -939,7 +1051,7 @@ section.footer {
     }
 
     .btn-contact-home {
-        margin-bottom: calc((100vh - 100px)*0.45)
+        margin-bottom: calc((100vh - 100px) * 0.45)
     }
 
     section.home {
@@ -996,7 +1108,7 @@ section.footer {
         font-size: 2rem;
     }
 
-    .projects>h1 {
+    .projects > h1 {
         font-size: 2.5rem;
     }
 
@@ -1004,7 +1116,7 @@ section.footer {
         font-size: 2.5rem;
     }
 
-    .contact>h1 {
+    .contact > h1 {
         font-size: 2.5rem;
     }
 
@@ -1017,7 +1129,7 @@ section.footer {
         padding-top: 37.5px;
     }
 
-    .projects>h1 {
+    .projects > h1 {
         padding-top: 0;
 
     }
@@ -1032,7 +1144,7 @@ section.footer {
 
 }
 
-@media(max-width: 400px) {
+@media (max-width: 400px) {
     .landing-page-text h1 {
         font-size: 3.2rem;
     }
@@ -1041,7 +1153,7 @@ section.footer {
         font-size: 1rem;
     }
 
-    .contact>h1 {
+    .contact > h1 {
         font-size: 3rem;
     }
 
@@ -1054,7 +1166,7 @@ section.footer {
     }
 }
 
-@media(max-width: 335px) {
+@media (max-width: 335px) {
     .landing-page-text h1 {
         font-size: 2.5rem;
     }
@@ -1101,13 +1213,13 @@ section.footer {
     /* Add padding as needed */
 }
 
-.column>p {
+.column > p {
     font-size: 1.5rem;
 
 }
 
 p strong {
-    color: #2860F8
+    color: #07A5E9
 }
 
 .axiologic-research-container {
@@ -1116,12 +1228,15 @@ p strong {
     justify-content: space-around;
     padding: 20px;
 }
-.blogs-demo{
+
+.blogs-demo {
     display: flex;
 }
-.blogs-title{
+
+.blogs-title {
     text-align: center;
 }
-.demo-container{
+
+.demo-container {
     margin-top: 95px;
 }
